Fixed some alignment

--- a/src/components/employeesCard/EmployeeCard.module.scss
+++ b/src/components/employeesCard/EmployeeCard.module.scss
@@ -37,6 +37,7 @@
     display: grid;
     grid-area: icon;
     align-items: center;
+    justify-content: center;
   }
 
   h2 {
